# RiemannHypothesisProof

./: .gitignore  RESEARCH_constant_0.04621.md  _abel_proof_path.py  _abel_scaling.py  _alpha_derivation.py  _alpha_derivation_v2.py  _alpha_sweep.py  _amplitude_puzzle.py  _analytic_continuation_operator.py  _analytic_continuation_v2.py  _analytical_attack.py  _analytical_gamma_scaling.py  _arithmetic_chaos.py  _arithmetic_jacobi.py  _ballot_analytical.py  _ballot_proof.py  _banded_operator.py  _basis_Q_search.py  _basis_transform_candidates.py  _bc_eigs_200.npy  _bc_transfer.py  _bchi_exact.py  _berry_keating_v2.py  _berry_keating_xp.py  _beta_correction.py  _beta_sensitivity.py  _bk_smooth_400.npy  _chi4_attack.py  _close_gap2.py  _close_gap2_fast.py  _close_the_gap.py  _connes_transfer.py  _connes_transfer_v2.py  _connes_transfer_v3.py  _connes_transfer_v4.py  _convergence_and_selfadjoint.py  _deficit_scaling.py  _dirichlet_gamma.py  _div_eigs_200.npy  _eigenvalue_check.py  (+464 more)
.planning/: .continue-here.md  HANDOFF-DWS-DWWJG14.json  HANDOFF.json  MILESTONE-CONTEXT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  audit_prime_cap_bug.md
data/: maass_forms.json
docs/: M_function_theorem.tex  M_identity.tex  PAPERS_STATUS.md  README.md  cauchy_matrix_conjecture.tex  conjugate_pair_stability.tex  dbn_analytical_notes.tex  dbn_zero_dynamics.tex  eigenvector_rigidity-DWS-DWWJG14.tex  eigenvector_rigidity.md  eigenvector_rigidity.tex  finite_T_pair_correlation-DWS-DWWJG14.tex  finite_T_pair_correlation.md  finite_T_pair_correlation.tex  gamma_preprint.tex  grok_summary.md  (+22 more)
(+174 files in other folders)
