[project]
name = "riemann"
version = "0.1.0"
description = "Computational research platform for exploring the Riemann Hypothesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "gmpy2>=2.3.0",
    "h5py>=3.16.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mpmath>=1.3.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riemann"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
markers = ["slow: marks tests as slow"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.6",
]
